--- a/HotelReservation/HotelReservation/HotelReservation.csproj
+++ b/HotelReservation/HotelReservation/HotelReservation.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\GroupController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\RoomController.cs" />
     <Compile Include="Data\HotelReservationContext.cs" />
@@ -165,6 +166,14 @@
     <Compile Include="Migrations\201909131110294_PhotoAddedToRoom.Designer.cs">
       <DependentUpon>201909131110294_PhotoAddedToRoom.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909151246200_CustomerIdAddedToBooking.cs" />
+    <Compile Include="Migrations\201909151246200_CustomerIdAddedToBooking.Designer.cs">
+      <DependentUpon>201909151246200_CustomerIdAddedToBooking.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909151327454_CustDisplayNameChaneInBooking.cs" />
+    <Compile Include="Migrations\201909151327454_CustDisplayNameChaneInBooking.Designer.cs">
+      <DependentUpon>201909151327454_CustDisplayNameChaneInBooking.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BedType.cs" />
     <Compile Include="Models\Booking.cs" />
@@ -176,7 +185,7 @@
     <Compile Include="Models\Room.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModel\VwAdmin.cs" />
+    <Compile Include="ViewModel\VwLogin.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -429,11 +438,14 @@
     <Content Include="Views\Menu\Edit.cshtml" />
     <Content Include="Views\Customer\Edit.cshtml" />
     <Content Include="Views\Room\Edit.cshtml" />
+    <Content Include="Views\Booking\Index.cshtml" />
+    <Content Include="Views\Booking\Create.cshtml" />
+    <Content Include="Views\Booking\Edit.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Upload\" />
-    <Folder Include="Views\Booking\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -464,6 +476,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201909131110294_PhotoAddedToRoom.resx">
       <DependentUpon>201909131110294_PhotoAddedToRoom.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909151246200_CustomerIdAddedToBooking.resx">
+      <DependentUpon>201909151246200_CustomerIdAddedToBooking.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909151327454_CustDisplayNameChaneInBooking.resx">
+      <DependentUpon>201909151327454_CustDisplayNameChaneInBooking.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
